# owncloudemulator

./: Procfile  app.py  pyproject.toml  requirements.txt
